[project]
name = "url-shorter-prod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.122.0",
    "greenlet>=3.2.4",
    "pytest-asyncio>=1.3.0",
    "sqlalchemy==2.0.44",
    "uvicorn>=0.38.0",
]
